--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <div class="swiper-slide">
                     <div class="bg-img valign" data-overlay-dark="6">
                         <video width="100%" autoplay muted loop class="video-bg">
-                            <source src="/img/bussiness2.mp4" type="video/mp4" />
+                            <source src="/img/banner.mp4" type="video/mp4" />
                         </video>
                         <!-- <img src="/img/bill-board.gif" alt=""> -->
                         <!-- <div class="container">
@@ -554,127 +554,6 @@
     </section>
 
     <!-- ==================== End Skills Circle ==================== -->
-
-
-
-    <!-- ==================== Start works ==================== -->
-
-    <section id="works" class="portfolio section-padding pb-70">
-        <div class="container">
-            <div class="sec-head ">
-                <h6>Our Works.</h6>
-                <h3>Portfolio</h3>
-                <span class="tbg text-right">Portfolio</span>
-            </div>
-        </div>
-        <div class="container-fluid">
-            <div class="row">
-
-                <!-- filter links -->
-                <div class="filtering text-center col-12">
-                    <div class="filter">
-                        <span data-filter='*' class="active">All</span>
-                        <span data-filter='.brand'>Branding</span>
-                        <span data-filter='.web'>Mobile App</span>
-                        <span data-filter='.graphic'>Creative</span>
-                    </div>
-                </div>
-
-                <!-- gallery -->
-                <div class="gallery full-width">
-
-                    <!-- gallery item -->
-                    <div class="col-lg-4 col-md-6 items graphic wow fadeInUp" data-wow-delay=".4s">
-                        <div class="item-img">
-                            <a href="project-details.html" class="imago wow">
-                                <img src="img/portfolio/mas/01.jpg" alt="image">
-                                <div class="item-img-overlay"></div>
-                            </a>
-                        </div>
-                        <div class="cont">
-                            <h6>ROI-Driven Campaign</h6>
-                            <span><a href="#0">Marketing</a>, <a href="#0">Analytics</a></span>
-                        </div>
-                    </div>
-
-                    <!-- gallery item -->
-                    <div class="col-lg-4 col-md-6 items web lg-mr wow fadeInUp" data-wow-delay=".4s">
-                        <div class="item-img">
-                            <a href="project-details.html" class="imago wow">
-                                <img src="img/portfolio/mas/02.jpg" alt="image">
-                                <div class="item-img-overlay"></div>
-                            </a>
-                        </div>
-                        <div class="cont">
-                            <h6>Influencer Outreach</h6>
-                            <span><a href="#0">Social</a>, <a href="#0">Creative</a></span>
-                        </div>
-                    </div>
-
-                    <!-- gallery item -->
-                    <div class="col-lg-4 col-md-6 items brand wow fadeInUp" data-wow-delay=".4s">
-                        <div class="item-img">
-                            <a href="project-details.html" class="imago wow">
-                                <img src="img/portfolio/mas/03.jpg" alt="image">
-                                <div class="item-img-overlay"></div>
-                            </a>
-                        </div>
-                        <div class="cont">
-                            <h6>SEO Growth Hack</h6>
-                            <span><a href="#0">SEO</a>, <a href="#0">Content</a></span>
-                        </div>
-                    </div>
-
-                    <!-- gallery item -->
-                    <!-- <div class="col-lg-4 col-md-6 items graphic wow fadeInUp" data-wow-delay=".4s">
-                        <div class="item-img">
-                            <a href="project-details.html" class="imago wow">
-                                <img src="img/portfolio/mas/04.jpg" alt="image">
-                                <div class="item-img-overlay"></div>
-                            </a>
-                        </div>
-                        <div class="cont">
-                            <h6>Brand Identity Design</h6>
-                            <span><a href="#0">Branding</a>, <a href="#0">Visuals</a></span>
-                        </div>
-                    </div> -->
-
-                    <!-- gallery item -->
-                    <!-- <div class="col-lg-4 col-md-6 items web wow fadeInUp" data-wow-delay=".4s">
-                        <div class="item-img">
-                            <a href="project-details.html" class="imago wow">
-                                <img src="img/portfolio/mas/05.jpg" alt="image">
-                                <div class="item-img-overlay"></div>
-                            </a>
-                        </div>
-                        <div class="cont">
-                            <h6>See It Yourself</h6>
-                            <span><a href="#0">Design</a>, <a href="#0">WordPress</a></span>
-                        </div>
-                    </div> -->
-
-                    <!-- gallery item -->
-                    <!-- <div class="col-lg-4 col-md-6 items brand wow fadeInUp" data-wow-delay=".4s">
-                        <div class="item-img">
-                            <a href="project-details.html" class="imago wow">
-                                <img src="img/portfolio/mas/06.jpg" alt="image">
-                                <div class="item-img-overlay"></div>
-                            </a>
-                        </div>
-                        <div class="cont">
-                            <h6>Blast From The Past</h6>
-                            <span><a href="#0">Design</a>, <a href="#0">WordPress</a></span>
-                        </div>
-                    </div> -->
-
-                </div>
-
-            </div>
-        </div>
-    </section>
-
-    <!-- ==================== End works ==================== -->
-
 
 
     <!-- ==================== Start clients Brands ==================== -->
